@@ -1,141 +1,129 @@
 package de.saring.sportstracker.gui;
 
 import de.saring.sportstracker.core.STException;
+import static org.junit.Assert.*;
+import static org.mockito.Mockito.*;
+
 import de.saring.sportstracker.data.Exercise;
 import de.saring.sportstracker.data.ExerciseList;
 import de.saring.sportstracker.gui.views.EntryView;
 import java.util.Date;
 import javax.swing.JOptionPane;
-import org.easymock.EasyMock;
-import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-import static org.junit.Assert.*;
 
 /**
- * Unit tests of class STController/Impl. All the involved components will be 
- * mocked via EasyMock.
- * 
+ * Unit tests of class STController/Impl. All the involved components will be
+ * mocked via Mockito.
+ *
  * @author Stefan Saring
  */
 public class STControllerTest {
 
     private STController controller;
-    
+
     private STContext contextMock;
     private STDocument documentMock;
-    private STView viewMock;    
+    private STView viewMock;
     private EntryView exerciseViewMock;
-
-    private static final int[] EXERCISE_IDS = new int[] {123, 234};
     
+    private static final int[] EXERCISE_IDS = new int[]{123, 234};
+    private ExerciseList exerciseList;
+
     @Before
-    public void setUp () {
+    public void setUp() {
         // create and init mocks
-        contextMock = EasyMock.createMock (STContext.class);
-        documentMock = EasyMock.createMock (STDocument.class);
-        viewMock = EasyMock.createMock (STView.class);                
-        exerciseViewMock = EasyMock.createMock (EntryView.class);
+        contextMock = mock(STContext.class);
+        documentMock = mock(STDocument.class);
+        viewMock = mock(STView.class);
+        exerciseViewMock = mock(EntryView.class);
 
         // create controller for testing
-        controller = new STControllerImpl (contextMock, documentMock, viewMock);
-    }
+        controller = new STControllerImpl(contextMock, documentMock, viewMock);
 
-    @After
-    public void tearDown () {
-        // verify mocking usage
-        EasyMock.verify (contextMock);
-        EasyMock.verify (documentMock);
-        EasyMock.verify (viewMock);
-        EasyMock.verify (exerciseViewMock);
+        // create test exercise list
+        exerciseList = new ExerciseList();
+        for (int exeID : EXERCISE_IDS) {
+            Exercise exe = new Exercise(exeID);
+            exe.setDate(new Date());
+            exerciseList.set(exe);
+        }        
     }
 
     /**
-     * Test of method deleteEntry(). Scenario:
-     * There's no exercise selected, it must delete nothing.
+     * Test of method deleteEntry(). Scenario: There's no exercise selected, it
+     * must delete nothing.
      */
     @Test
-    public void testDeleteEntryNothingSelected () {
-        EasyMock.expect (viewMock.getCurrentView ()).andReturn (exerciseViewMock).times (3);
-        EasyMock.expect (exerciseViewMock.getSelectedExerciseCount ()).andReturn (0);
-        EasyMock.expect (exerciseViewMock.getSelectedNoteCount ()).andReturn (0);
-        EasyMock.expect (exerciseViewMock.getSelectedWeightCount ()).andReturn (0);
+    public void testDeleteEntryNothingSelected() {
         
-        replayMocks ();
-        controller.deleteEntry ();
+        when(viewMock.getCurrentView()).thenReturn(exerciseViewMock);
+        when(exerciseViewMock.getSelectedExerciseCount()).thenReturn(0);
+        when(exerciseViewMock.getSelectedNoteCount()).thenReturn(0);
+        when(exerciseViewMock.getSelectedWeightCount()).thenReturn(0);
+        
+        controller.deleteEntry();
+        
+        verifyZeroInteractions(contextMock);
+        verifyZeroInteractions(documentMock);
     }
 
     /**
-     * Test of method deleteEntry(). Scenario:
-     * There's two exercise selected, the user confirms that they must be deleted. The 
-     * exercises must be deleted and the view must be updated.
+     * Test of method deleteEntry(). Scenario: There's two exercise selected,
+     * the user confirms that they must be deleted. The exercises must be
+     * deleted and the view must be updated.
      */
     @Test
-    public void testDeleteEntryConfirmed () {
-        EasyMock.expect (viewMock.getCurrentView ()).andReturn (exerciseViewMock).times (2);
-        EasyMock.expect (exerciseViewMock.getSelectedExerciseCount ()).andReturn (2);
-        EasyMock.expect (exerciseViewMock.getSelectedExerciseIDs ()).andReturn (EXERCISE_IDS);
+    public void testDeleteEntryConfirmed() {
+        
+        when(viewMock.getCurrentView()).thenReturn(exerciseViewMock);
+        when(exerciseViewMock.getSelectedExerciseCount()).thenReturn(2);
+        when(exerciseViewMock.getSelectedExerciseIDs()).thenReturn(EXERCISE_IDS);
 
-        EasyMock.expect (contextMock.getMainFrame ()).andReturn (null);
-        EasyMock.expect (contextMock.showConfirmDialog (null, "st.view.confirm.delete.title", 
-            "st.view.confirm.delete.text")).andReturn (JOptionPane.YES_OPTION);
+        when(contextMock.showConfirmDialog(null, "st.view.confirm.delete.title",
+                "st.view.confirm.delete.text")).thenReturn(JOptionPane.YES_OPTION);
 
         // create ExerciseList stored in document mock => must be empty after test
-        ExerciseList exeList = new ExerciseList ();
-        for (int exeID : EXERCISE_IDS) {
-            Exercise exe = new Exercise (exeID);
-            exe.setDate (new Date ());
-            exeList.set (exe);
-        }
-        EasyMock.expect (documentMock.getExerciseList ()).andReturn (exeList);
+        when(documentMock.getExerciseList()).thenReturn(exerciseList);
 
-        // register document mock as list change listener => must be called twice
-        exeList.addListChangeListener (documentMock);
-        documentMock.listChanged (null);
-        documentMock.listChanged (null);
-        
-        replayMocks ();
-        controller.deleteEntry ();
+        // register document mock as list change listener => must then be notified twice
+        exerciseList.addListChangeListener(documentMock);
 
-        assertEquals (0, exeList.size ());
+        controller.deleteEntry();
+
+        assertEquals(0, exerciseList.size());
+        verify(documentMock, times(2)).listChanged(null);
     }
 
     /**
-     * Test of method deleteEntry(). Scenario:
-     * There's two exercise selected, the user does not confirm the deletion - 
-     * it must delete nothing.
+     * Test of method deleteEntry(). Scenario: There's two exercise selected,
+     * the user does not confirm the deletion - it must delete nothing.
      */
     @Test
-    public void testDeleteEntryCancelled () {
-        EasyMock.expect (viewMock.getCurrentView ()).andReturn (exerciseViewMock).times (2);
-        EasyMock.expect (exerciseViewMock.getSelectedExerciseCount ()).andReturn (2);
-        EasyMock.expect (exerciseViewMock.getSelectedExerciseIDs ()).andReturn (EXERCISE_IDS);
-        EasyMock.expect (documentMock.getExerciseList ()).andReturn (new ExerciseList ());
-
-        EasyMock.expect (contextMock.getMainFrame ()).andReturn (null);
-        EasyMock.expect (contextMock.showConfirmDialog (null, "st.view.confirm.delete.title", 
-            "st.view.confirm.delete.text")).andReturn (JOptionPane.NO_OPTION);
+    public void testDeleteEntryCancelled() {
         
-        replayMocks ();
-        controller.deleteEntry ();
+        when(viewMock.getCurrentView()).thenReturn(exerciseViewMock);
+        when(exerciseViewMock.getSelectedExerciseCount()).thenReturn(2);
+        when(exerciseViewMock.getSelectedExerciseIDs()).thenReturn(EXERCISE_IDS);
+        when(documentMock.getExerciseList()).thenReturn(exerciseList);
+
+        when(contextMock.showConfirmDialog(null, "st.view.confirm.delete.title",
+                "st.view.confirm.delete.text")).thenReturn(JOptionPane.NO_OPTION);
+
+        controller.deleteEntry();
+        
+        assertEquals(2, exerciseList.size());
     }
-    
+
     /**
-     * Test of method print(). 
+     * Test of method print().
      */
     @Test
-    public void testPrintSuccess () throws STException {
-        EasyMock.expect (viewMock.getCurrentView ()).andReturn (exerciseViewMock);
-        exerciseViewMock.print ();
-        
-        replayMocks ();
-        controller.print ();
-    }
+    public void testPrintSuccess() throws STException {
+        when(viewMock.getCurrentView()).thenReturn(exerciseViewMock);
 
-    private void replayMocks () {
-        EasyMock.replay (contextMock);
-        EasyMock.replay (documentMock);
-        EasyMock.replay (viewMock);
-        EasyMock.replay (exerciseViewMock);
+        controller.print();
+        
+        verify(exerciseViewMock).print();
     }
 }
