@@ -1,10 +1,10 @@
 package de.saring.util.data;
 
-import org.easymock.EasyMock;
-import org.junit.After;
+import static org.junit.Assert.*;
+import static org.mockito.Mockito.*;
+
 import org.junit.Before;
 import org.junit.Test;
-import static org.junit.Assert.*;
 
 /**
  * Unit tests for IdObjectListChangeListener usage in IdObjectList. Test for a
@@ -25,13 +25,8 @@ public class IdObjectListChangeListenerTest {
         idObjectList.set(new DummyIdObject(3));
 
         // create and init the listener mock
-        listenerMock = EasyMock.createMock(IdObjectListChangeListener.class);
+        listenerMock = mock(IdObjectListChangeListener.class);
         idObjectList.addListChangeListener(listenerMock);
-    }
-
-    @After
-    public void tearDown() {
-        EasyMock.verify(listenerMock);
     }
 
     /**
@@ -41,11 +36,11 @@ public class IdObjectListChangeListenerTest {
     @Test
     public void testSetReplace() {
         DummyIdObject changedObject = new DummyIdObject(2);
-        listenerMock.listChanged(changedObject);
-        EasyMock.replay(listenerMock);
 
         idObjectList.set(changedObject);
-        assertEquals(3, idObjectList.size());
+        
+        assertEquals(3, idObjectList.size());        
+        verify(listenerMock).listChanged(changedObject);
     }
 
     /**
@@ -55,11 +50,11 @@ public class IdObjectListChangeListenerTest {
     @Test
     public void testSetAdd() {
         DummyIdObject newObject = new DummyIdObject(5);
-        listenerMock.listChanged(newObject);
-        EasyMock.replay(listenerMock);
 
         idObjectList.set(newObject);
+        
         assertEquals(4, idObjectList.size());
+        verify(listenerMock).listChanged(newObject);
     }
 
     /**
@@ -70,18 +65,14 @@ public class IdObjectListChangeListenerTest {
     public void testSetReplaceTwoListeners() {
         DummyIdObject changedObject = new DummyIdObject(2);
 
-        listenerMock.listChanged(changedObject);
-        EasyMock.replay(listenerMock);
-
-        IdObjectListChangeListener listenerMock2 = EasyMock.createMock(IdObjectListChangeListener.class);
+        IdObjectListChangeListener listenerMock2 = mock(IdObjectListChangeListener.class);
         idObjectList.addListChangeListener(listenerMock2);
-        listenerMock2.listChanged(changedObject);
-        EasyMock.replay(listenerMock2);
 
         idObjectList.set(changedObject);
         assertEquals(3, idObjectList.size());
 
-        EasyMock.verify(listenerMock2);
+        verify(listenerMock).listChanged(changedObject);
+        verify(listenerMock2).listChanged(changedObject);
     }
 
     /**
@@ -89,11 +80,10 @@ public class IdObjectListChangeListenerTest {
      */
     @Test
     public void testRemoveSuccess() {
-        listenerMock.listChanged(null);
-        EasyMock.replay(listenerMock);
-
         assertTrue(idObjectList.removeByID(2));
+        
         assertEquals(2, idObjectList.size());
+        verify(listenerMock).listChanged(null);
     }
 
     /**
@@ -102,10 +92,10 @@ public class IdObjectListChangeListenerTest {
      */
     @Test
     public void testRemoveFailed() {
-        EasyMock.replay(listenerMock);
-
         assertFalse(idObjectList.removeByID(5));
+        
         assertEquals(3, idObjectList.size());
+        verifyZeroInteractions(listenerMock);
     }
 
     /**
@@ -113,7 +103,6 @@ public class IdObjectListChangeListenerTest {
      */
     @Test
     public void testMethodsWithoutListenerNotification() {
-        EasyMock.replay(listenerMock);
 
         assertEquals(2, idObjectList.getAt(1).getId());
         assertEquals(2, idObjectList.getByID(2).getId());
@@ -121,6 +110,8 @@ public class IdObjectListChangeListenerTest {
         assertEquals(4, idObjectList.getNewID());
         assertEquals(3, idObjectList.size());
         assertEquals(1, idObjectList.iterator().next().getId());
+
+        verifyZeroInteractions(listenerMock);
     }
 
     /**
